--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -16,6 +16,20 @@ a {
   float: left;
 }
 
+#form{
+  margin-top: 20px;
+}
+
+a{
+  text-decoration: none;
+  margin: 10px 50px 10px 0px;
+  color: black;
+  font-size: 20px;
+}
+a:hover{
+  color: silver;
+}
+
 .clear{
   clear: both;
 }
