--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,8 +1,18 @@
 doctype html
-html
+html(ng-app='myApp')
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js")
   body
+    h1= title
+    div#totalMooney
+      h2(style="float:left; margin-right:50px") Your Account:
+      h2(style="float:left; color: red")= totalMoney
+    div.clear
+    div#nav
+      a(href="/" class='left') Expenditure
+      a(href="/changeToEarning" class='left') Earning
+      a(href="/detail" class='left') Detail
+    div.clear
     block content
