--- a/views/layout.pug
+++ b/views/layout.pug
@@ -12,7 +12,7 @@ html(ng-app='myApp')
     div.clear
     div#nav
       a(href="/" class='left') Expenditure
-      a(href="/changeToEarning" class='left') Earning
+      a(href="/change/earning" class='left') Earning
       a(href="/detail" class='left') Detail
     div.clear
     block content
