--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,7 +3,8 @@ html(ng-app='myApp')
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
-    script(src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js")
+    script(src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js")
+    script(src='/javascript/layout.js')
   body
     h1= title
     div#totalMooney
@@ -13,6 +14,6 @@ html(ng-app='myApp')
     div#nav
       a(href="/" class='left') Expenditure
       a(href="/change/earning" class='left') Earning
-      a(href="/detail" class='left') Detail
+      a(href="/change/detail" class='left') Detail
     div.clear
     block content
