--- a/views/post_earning.pug
+++ b/views/post_earning.pug
@@ -6,15 +6,16 @@ block content
         div#rightform
             form(method='POST' action='/action/postEar')
                 div.form-group
-                    label(for='title') Expend:
+                    label Expend:
                     input#earning.form-control(type='text', placeholder='Money your earning' name='earning' required='true')
                 div.form-group
-                    label(for='summary') Choose Tag:
+                    p Choose Tag:
                     for tag in earning_list
-                        p #{tag.earningTag}
-                            input#earningTag.form-control(type='checkbox', placeholder='Summary' name='earningTag' value=tag.earningTag)
+                        div#leftchoose
+                            p #{tag.Tag}
+                                input#earningTag.form-control(type='checkbox', placeholder='Summary' name='earningTag' value=tag.Tag)
                 div.form-group
-                    label(for='isbn') Purpose:
+                    label Purpose:
                     input#earningPurpose.form-control(type='text', placeholder='Edit type of earning' name='earPurpose' required='true')
-                button.btn.btn-primary(type='submit') Submit
+                button#summit(type='submit') Submit
     div.clear
